# tcom_bibliography

./: LICENSE  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  signals.py
core/migrations/: 0001_initial.py  0002_controlledterm.py  0003_publication.py  0004_publicationassignment_workflowtransition.py  0005_extractionrecord.py  0006_assessmenttoolusage_studyprofile_outcomedomain.py  0007_extractionreview_historicalassessmenttoolusage_and_more.py
core/models/: __init__.py  assessment.py  controlled_vocabulary.py  extraction.py  extraction_review.py  publications.py  study_profile.py  users.py  workflow.py
core/services/: doi_import.py
templates/admin/: publication_changelist.html
