[project]
name = "tcom-bibliography"
version = "0.1.0"
description = "Curated bibliographic knowledgebase for TCOM-related research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.12",
    "django-import-export>=4.4.0",
    "django-nested-admin>=4.1.6",
    "django-simple-history>=3.11.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
